# slint_stm32

./: Cargo.toml  README.md
src/: main.rs
ui/: printerdemo.slint
