[package]
name = "slint_stm32"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[features]
simulator = ["slint/renderer-winit-software", "slint/backend-winit", "slint/std"]
default = ["simulator"]

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", default-features = false }
mcu-board-support = { git = "https://github.com/slint-ui/slint" }
# ...
[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
opt-level = "s" # optimize for binary size